[tool.poetry]
name = "make-it"
version = "0.1.0"
description = ""
authors = ["Ghost6818 <96416735+Ghost6818@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "make_it"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
